# fun

./: .bashrc  .gitignore  .vimrc  .zshrc  candy-patched.zsh-theme  codeforces_template.cpp  django_help.md  django_help.txt  flag.go  format_py.sh  generate_pdf.go  generate_xls.go  git_help.md  gitavamaker.py  jsonpb_unmarshal.go  lint_py.sh  linux.md  net.md  price_formatter.go  primes_in_line.py  psql_help.md  shell.sh  ssh.md  ssh_tunnel.md  times_called_decorator.py
finance_calendar/: README.md  config.json  pyproject.toml
finance_calendar/db/: init.csv  overrides.csv
finance_calendar/fincalendar/: config.json  main.py  parameters.py
finance_calendar/fincalendar/db/: init.csv
